--- a/style.css
+++ b/style.css
@@ -103,8 +103,10 @@ section p{
 }
 
 #coracao{
-    color: dodgerblue;
-    font-size: 1.4rem;
+    max-width: 60%;
+    max-height: 60%;
+    width: auto;
+    height: auto;
 }
 
 footer{
