--- a/style.css
+++ b/style.css
@@ -46,6 +46,12 @@ nav{
     flex-wrap: wrap;
 }
 
+.menu li{
+    list-style: none;
+    text-decoration: underline;
+    text-decoration-color: cyan;
+}
+
 .sobre-container{
     align-items: flex-start;
     width: 50%;
@@ -64,7 +70,7 @@ nav{
     width: 45%;
     height: 40%;
     border-radius: 8px;
-    box-shadow: 2px 2px 4px rgb(61, 61, 61);
+    box-shadow: 4px 4px 11px rgb(8, 8, 8);
     margin-left: 1rem;
 }
 
@@ -73,17 +79,13 @@ section h2{
     font-size: 1.2rem;
     /*font-weight: 800;*/
     padding: 0.5rem 0;
+    line-height: 2rem;
 }
 
 section p{
     font-family: 'Nanum Gothic', sans-serif;
     font-size: 1rem;
     line-height: 1.8rem;
-}
-
-.menu li{
-    list-style: none;
-    text-decoration: underline;
 }
 
 .projetos{
@@ -98,7 +100,7 @@ section p{
 }
 
 .skills i{
-    font-size: 282%;
+    font-size: 232%;
     padding-right: 1.2rem;
 }
 
@@ -121,6 +123,33 @@ footer{
     padding: 1rem;
 }
 
+.contato{
+    font-family: 'Press Start 2P', cursive;
+    font-size: 1.2rem;
+    padding: 0.5rem 0;
+    line-height: 2rem;
+}
+
+.ico-container{
+    display: flex;
+}
+
+.ico-contatos1 i{
+    font-size: 232%;
+    padding-right: 1rem;
+}
+
+.ico-contatos2 img{
+    width: 85%;
+    height: 85%;
+    
+}
+
+.contato-container{
+    padding-left: 1rem;
+}
+
+
 @media only screen and (max-width:870px){
     .da-silva{
         display: none;
@@ -129,7 +158,7 @@ footer{
 }
 
 @media only screen and (max-width:750px){
-    .sobre{
+       .sobre{
         flex-wrap: wrap-reverse;
         
     }
@@ -141,10 +170,21 @@ footer{
     .sobre img{
         width: 90%;
         margin-bottom: 1rem;
+        margin-top: 4.2rem;
     }
 
 
      nav{
-        height: 8rem;
+        height: 3rem;
+        position: fixed;
+        width: 91.5%;
+     }
+
+     .contato{
+        margin-top: 4.8rem;
+     }
+
+     .menu{
+        display: none;
      }
 }
